Noteworthy changes in version 2.5.6 (unreleased)
------------------------------------------------

  * gpg: Add a flag to the filter expressions for left anchored
    substring match.  [rGc12b7d047e]

  * gpg: Fix double free of internal data.  [T7547]

  * gpgsm: Extend --learn-card by an optional s/n argument.  [T7379]

  * gpgsm: Skip expired certificates when selection a certificate by
    subject.  [rG4cf83273e8]

  * scd: Fix posssible lockup on Windows due to a lost select
    result.  [rGa7ec3792c5]

  * card: New command "ll" as alias for "list --cards".  [rGd6ee7adebe]

  * gpgconf: Fix reload and kill of keyboxd.  [T7569]

  Release-info: https://dev.gnupg.org/T7586


Noteworthy changes in version 2.5.5 (2025-03-07)
------------------------------------------------

  * gpg: Fix a verification DoS due to a malicious subkey in the
    keyring.  [T7527]

  * dirmngr: Fix possible hangs due to blocking connection requests.
    [T6606, T7434]

  * w32: On socket nonce mismatch close the socket.  [T7434]

  * w32: Print more detailed diagnostics for IPC errors.

  * GPGME is not any more distributed with the Windows installer.
    Please install gpg4win to get gpgme version.

  See-also: gnupg-announce/2025q1/000491.html
  Release-info: https://dev.gnupg.org/T7530


Noteworthy changes in version 2.5.4 (2025-02-12)
------------------------------------------------

  * gpg: New option --disable-pqc-encryption.  [rG00c31f8b04]

  * gpg: Fix --quick-add-key for Weierstrass ECC with usage given.
    [T7506]

  * gpg: Fix handling with no CRC armor.  [T7071]

  * gpg: New private Kyber keys are now cross-referenced using a new
    Link attribute.  [T6638]

  * gpg: Fix an import problem with keys having another primary key as
    a subkey.  [T7527]

  * gpgsm: Allow unattended PKCS#12 export without passphrase.
    [rG159e801043]

  * gpgsm: Allow CSR generation with an unprotected key.
    [rG89055f24f4]

  * agent: New option --change-std-env-name.  [T7522]
